--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-bootstrap": "^2.0.0-beta.6",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-location-picker": "^1.5.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
