--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
     "react-inner-image-zoom": "^2.1.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
